# QtKittiVisualizer

./: CMakeLists.txt  KittiConfig.cpp  KittiConfig.h  KittiDataset.cpp  KittiDataset.h  QtKittiVisualizer.cpp  QtKittiVisualizer.h  QtKittiVisualizer.ui  README.md  main.cpp  point_cloud_intensity_handler.h  point_cloud_intensity_handler.hpp
documentation/build-instructions/: ubuntu-20.04.md
kitti-devkit-raw/: readme.txt  tracklets.h
patches/pcl-1.12.1/: link-required-vtk-libraries-for-libpcl_io.patch
